Changes on the header

--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -4,7 +4,8 @@
       "list-context.image-list#demo",
       /* You can make references to blocks defined in other files.
        * For example, `flex-layout.row#deals` is defined in the `deals.json` file. */
-      "flex-layout.row#deals",
+      // "flex-layout.row#deals",
+      "flex-layout.row#images",
       "rich-text#shelf-title",
       "flex-layout.row#shelf",
       "info-card#home",
@@ -13,11 +14,24 @@
       "newsletter"
     ]
   },
-
-  "shelf#home": {
-    "blocks": ["product-summary.shelf"]
+  "flex-layout.row#images": {
+    "children": [
+      "image#pedalPaulista",
+      "image#lojaBike"
+    ],
+    "props": {}
   },
-
+  "image#pedalPaulista": {
+    "props": {}
+  },
+  "image#lojaBike": {
+    "props": {}
+  },
+  "shelf#home": {
+    "blocks": [
+      "product-summary.shelf"
+    ]
+  },
   "product-summary.shelf": {
     "children": [
       "product-summary-name",
@@ -28,9 +42,10 @@
       "product-summary-buy-button"
     ]
   },
-
   "list-context.image-list#demo": {
-    "children": ["slider-layout#demo-images"],
+    "children": [
+      "slider-layout#demo-images"
+    ],
     "props": {
       "height": 720,
       "images": [
@@ -57,7 +72,6 @@
       "blockClass": "carousel"
     }
   },
-
   "rich-text#shelf-title": {
     "props": {
       "text": "## Summer",
@@ -65,11 +79,17 @@
     }
   },
   "flex-layout.row#shelf": {
-    "children": ["list-context.product-list#demo1"]
+    "children": [
+      "list-context.product-list#demo1"
+    ]
   },
   "list-context.product-list#demo1": {
-    "blocks": ["product-summary.shelf"],
-    "children": ["slider-layout#demo-products"],
+    "blocks": [
+      "product-summary.shelf"
+    ],
+    "children": [
+      "slider-layout#demo-products"
+    ],
     "props": {
       "orderBy": "OrderByTopSaleDESC"
     }
@@ -86,7 +106,6 @@
       "blockClass": "shelf"
     }
   },
-
   "info-card#home": {
     "props": {
       "id": "info-card-home",
@@ -100,14 +119,12 @@
       "textAlignment": "center"
     }
   },
-
   "rich-text#question": {
     "props": {
       "text": "**This is an example store built using the VTEX platform.\nWant to know more?**",
       "blockClass": "question"
     }
   },
-
   "rich-text#link": {
     "props": {
       "text": "\n**Reach us at**\nwww.vtex.com.br",
