--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -1,28 +1,34 @@
 {
   "header": {
-    "blocks": ["header-layout.desktop", "header-layout.mobile"]
+    "blocks": [
+      "header-layout.desktop",
+      "header-layout.mobile"
+    ]
   },
   "header.full": {
-    "blocks": ["header-layout.desktop", "header-layout.mobile"]
+    "blocks": [
+      "header-layout.desktop",
+      "header-layout.mobile"
+    ]
   },
   "header-layout.desktop": {
     "children": [
-      "header-row#1-desktop",
-      "header-row#2-desktop",
       "header-row#3-desktop",
       "header-row#4-desktop"
     ]
   },
-
   "header-row#1-desktop": {
-    "children": ["telemarketing"],
+    "children": [
+      "telemarketing"
+    ],
     "props": {
       "fullWidth": true
     }
   },
-
   "header-row#2-desktop": {
-    "children": ["notification.bar#home"],
+    "children": [
+      "notification.bar#home"
+    ],
     "props": {
       "fullWidth": "true"
     }
@@ -34,7 +40,6 @@
   },
   "header-row#3-desktop": {
     "children": [
-      "vtex.menu@2.x:menu#websites",
       "header-spacer",
       "vtex.menu@2.x:menu#institutional"
     ],
@@ -56,7 +61,8 @@
     ],
     "props": {
       "sticky": true,
-      "blockClass": "main-header"
+      "blockClass": "main-header",
+      "inverted": "true"
     }
   },
   "logo#desktop": {
@@ -68,7 +74,9 @@
     }
   },
   "header-layout.mobile": {
-    "children": ["header-row#1-mobile"]
+    "children": [
+      "header-row#1-mobile"
+    ]
   },
   "header-row#1-mobile": {
     "children": [
@@ -84,9 +92,10 @@
     }
   },
   "drawer": {
-    "children": ["menu#drawer"]
+    "children": [
+      "menu#drawer"
+    ]
   },
-
   "menu#drawer": {
     "children": [
       "menu-item#category-apparel",
@@ -97,7 +106,6 @@
       "orientation": "vertical"
     }
   },
-
   "logo#mobile": {
     "props": {
       "title": "Logo",
