New Nesletter and mobile footer

--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -17,6 +17,11 @@
       "newsletter"
     ]
   },
+  "newsletter": {
+    "props": {
+      "label": "NEWSLETTER"
+    }
+  },
   "flex-layout.row#images": {
     "children": [
       "image#pedalPaulista",
