--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -88,7 +88,8 @@
     ],
     "props": {
       "sticky": true,
-      "blockClass": "main-header-mobile"
+      "blockClass": "main-header",
+      "inverted": "true"
     }
   },
   "drawer": {
